sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: not found: value getNombreValeur
  	for (k<- getNombreValeur to 0 by -1 ){
                 ^